--- a/demo/src/app/full/full.component.html
+++ b/demo/src/app/full/full.component.html
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col s6">
         <input type="text" matInput
-          ngxDaterangepickerMd
+          ngxMdDaterangepicker
           [autoApply]="options.autoApply"
           [linkedCalendars]="options.linkedCalendars"
           [singleDatePicker]="options.singleDatePicker"
