--- a/demo/src/app/single-datepicker/single-datepicker.component.html
+++ b/demo/src/app/single-datepicker/single-datepicker.component.html
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col s6">
     <input type="text"
-    ngxDaterangepickerMd
+    ngxMdDaterangepicker
     [isInvalidDate]="isInvalidDate"
     [isCustomDate]="isCustomDate"
     [locale]="{format: 'DD/MM/YYYY', firstDay: 1}"
@@ -15,7 +15,7 @@
   <div class="col s6">
     <b>Html code:</b>
       <pre class="prettyprint"><code class="html">&lt;input type="text"
-  ngxDaterangepickerMd
+  ngxMdDaterangepicker
   [isInvalidDate]="isInvalidDate"
   [isCustomDate]="isCustomDate"
   [locale]="{{ '{' }}format: 'DD/MM/YYYY', firstDay: 1}"
