--- a/demo/src/app/simple/simple.component.html
+++ b/demo/src/app/simple/simple.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>Simple daterangepicker</mat-toolbar>
 <div class="row">
   <div class="col s6">
-    <input type="text" ngxDaterangepickerMd
+    <input type="text" ngxMdDaterangepicker
     [(ngModel)]="selected" class="form-control" placeholder="Choose date"
     (ngModelChange)="ngModelChange($event)" (change)="change($event)" showCancel="true"
     />
@@ -15,13 +15,13 @@
 <div class="row">
   <div class="col s12">
     <b>Using the change event :</b>
-      <pre class="prettyprint"><code class="html">&lt;input type="text" ngxDaterangepickerMd
+      <pre class="prettyprint"><code class="html">&lt;input type="text" ngxMdDaterangepicker
 [(ngModel)]="selected" placeholder="Choose date" (change)="change($event)"/&gt;</code>
     </pre>
 
    <b>Or with ngModel :</b>
 
-      <pre class="prettyprint"><code class="html">&lt;input type="text" ngxDaterangepickerMd
+      <pre class="prettyprint"><code class="html">&lt;input type="text" ngxMdDaterangepicker
 [(ngModel)]="selected" placeholder="Choose date"
 (ngModelChange)="ngModelChange($event)"/&gt;</code>
     </pre>
@@ -35,7 +35,7 @@
 </div>
 <div class="row">
   <div class="col s12">
-    <ngx-daterangepicker-material (choosedDate)="choosedDate($event)"></ngx-daterangepicker-material>
+    <ngx-material-daterangepicker (choosedDate)="choosedDate($event)"></ngx-material-daterangepicker>
   </div>
 </div>
 <div class="row">
