--- a/demo/src/app/timepicker/timepicker.component.html
+++ b/demo/src/app/timepicker/timepicker.component.html
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col s6">
     <input type="text"
-    ngxDaterangepickerMd
+    ngxMdDaterangepicker
     [timePicker]="true"
     [timePickerSeconds]="true"
     [timePickerIncrement]="15"
@@ -16,7 +16,7 @@
   <div class="col s6">
     <b>Html code:</b>
       <pre class="prettyprint"><code class="html">&lt;input type="text"
-    ngxDaterangepickerMd
+    ngxMdDaterangepicker
     [timePicker]="true"
     [timePickerSeconds]="true"
     [timePickerIncrement]="15"
